stop justified and scrollable nav to wrap

--- a/assets/sass/bootstrap/_nav.scss
+++ b/assets/sass/bootstrap/_nav.scss
@@ -33,6 +33,8 @@
   }
 
   .nav-justified {
+    flex-wrap: nowrap;
+
     .nav-item {
       flex: 1 1 100%;
       text-align: center;
