--- a/assets/sass/material/_tab.scss
+++ b/assets/sass/material/_tab.scss
@@ -88,6 +88,7 @@
     }
 
     &.nav-scrollable {
+      flex-wrap: nowrap;
       overflow-x: auto;
       overflow-y: visible;
       -webkit-overflow-scrolling: touch;
