--- a/css/material.css
+++ b/css/material.css
@@ -3110,6 +3110,11 @@ pre code {
   text-align: center;
 }
 
+.nav-justified {
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+}
 .nav-justified .nav-item {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100%;
@@ -7284,6 +7289,9 @@ a.chip-warning:hover {
   }
 }
 .nav-tabs.nav-scrollable {
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: visible;
   -webkit-overflow-scrolling: touch;
